--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Proxit Ways | Join Free Telegram</title>
+  <title>Proxit Ways | Join Free WhatsApp</title>
   
   <!-- Meta Pixel Code -->
   <script>
@@ -109,15 +109,16 @@
     <img src="https://i.ibb.co/chbzpgNV/1000278308.jpg" alt="Proxit Ways Logo" class="logo" />
     <h1>PROXIT WAYS</h1>
     <p>👇👇👇👇👇</p>
-    <h2>JOIN FREE TELEGRAM</h2>
-    <p>🏆 The #1 Forex Trading Channel Worldwide 🌍</p>
+    <h2>JOIN FREE WHATSAPP</h2>
+    <p> </p>
     <p>📈 95% Success Rate</p>
     <p>🔥 Join the Best in Global Forex Trading 💼</p>
     <p>✅ Daily 20% Profit Tournament</p>
     <p>✅ Daily 3–4 Signals</p>
     <p>✅ 24×7 Live Support</p>
     <p>👇 Click the button below 👇</p>
-    <a href="http://t.me/+KRc3xDsyZyQ4OGM1" class="cta-button" target="_blank">JOIN FREE TELEGRAM</a>
+    <a href="https://chat.whatsapp.com/KiAU2Wz33367Il10aCMu6s" class="cta-button" target="_blank">JOIN FREE TELEGRAM</a>
   </div>
 </body>
 </html>
+
