--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
     <h1>PROXIT WAYS</h1>
     <p>👇👇👇👇👇</p>
     <h2>JOIN FREE WHATSAPP</h2>
-    <p> </p>
     <p>📈 95% Success Rate</p>
     <p>🔥 Join the Best in Global Forex Trading 💼</p>
     <p>✅ Daily 20% Profit Tournament</p>
     <p>✅ Daily 3–4 Signals</p>
     <p>✅ 24×7 Live Support</p>
     <p>👇 Click the button below 👇</p>
-    <a href="https://chat.whatsapp.com/KiAU2Wz33367Il10aCMu6s" class="cta-button" target="_blank">JOIN FREE TELEGRAM</a>
+    <a href="https://chat.whatsapp.com/KiAU2Wz33367Il10aCMu6s" class="cta-button" target="_blank">JOIN FREE WHATSAPP</a>
   </div>
 </body>
 </html>
+
 
